# threads-downloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  start.bat  start.sh
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-release.yml
scripts/: release.bat  release.sh  setup.bat
src/: cli_entry.py  main.py
src/threads_downloader/: cli.py  config.py  downloader.py  driver.py  scraper.py  utils.py
