[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threads-downloader"
version = "0.1.0"
description = "A powerful tool for downloading images and videos from Instagram Threads profiles"
readme = "README.md"
license = { text = "GPL-3.0" }
requires-python = ">=3.9"
authors = [
    { name = "911218sky", email = "sky@sky1218.com" }
]
maintainers = [
    { name = "911218sky", email = "sky@sky1218.com" }
]
keywords = [
    "threads",
    "instagram",
    "downloader",
    "media",
    "scraper",
    "video",
    "image",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/911218sky/threads-downloader"
Repository = "https://github.com/911218sky/threads-downloader.git"
Issues = "https://github.com/911218sky/threads-downloader/issues"

[project.scripts]
threads-downloader = "threads_downloader.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pyinstaller]
# PyInstaller configuration hints
onefile = true
strip = true
exclude-module = [
    "tkinter",
    "matplotlib", 
    "numpy",
    "pandas",
    "PIL",
    "scipy",
    "pytest",
    "unittest"
]
